--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<div class="mu-about-header">
 								<h2 class="mu-heading-title">SOBRE <span>NÓS</span></h2>
 								<span class="mu-header-dot"></span>
-								<p>Nós desenvolvemos projetos de Hackatons ou ideias Inovadoras, e estamos deixando disponíveis.</p>
+								<p>Nós desenvolvevemos projetos de Hackatons ou ideias Inovadoras, e estamos deixando disponíveis.</p>
 							</div>
 
 							<!-- Start About Us Content -->
@@ -651,31 +651,10 @@
 							<div class="mu-contact-header">
 								<h2 class="mu-heading-title">Contato</h2>
 								<span class="mu-header-dot"></span>
-								<p>Se quiserem comprar a nossa ideia ou se quiserem dialogar com o grupo.</p>
+								<p>Se gostarem da ideia nosso contato esta logo em baixo.</p>
 							</div>
 
 							<!-- Start Contact Content -->
-							<div class="mu-contact-content">
-								<div class="row">
-
-									<div class="col-md-8">
-										<div class="mu-contact-left">
-										<div id="form-messages"></div>
-											<form id="ajax-contact" method="post" action="mailer.php" class="mu-contact-form">
-												<div class="form-group">                
-													<input type="text" class="form-control" placeholder="Name" id="name" name="name" required>
-												</div>
-												<div class="form-group">                
-													<input type="email" class="form-control" placeholder="Enter Email" id="email" name="email" required>
-												</div>              
-												<div class="form-group">
-													<textarea class="form-control" placeholder="Message" id="message" name="message" required></textarea>
-												</div>
-												<button type="submit" class="mu-send-msg-btn"><span>SUBMIT</span></button>
-								            </form>
-										</div>
-									</div>	
-
 									<div class="col-md-4">
 										<div class="mu-contact-right">
 											<h4>Programming Boys</h4>
@@ -685,13 +664,6 @@
 												<p><i class="icon-envelope"></i>programmingBOYS@hotmail.com</p>
 												<p><i class="icon-phone"></i>62 987 678 9834</p>
 											</address>
-											<div class="mu-social-media">
-												<a href="#"><i class="icon-social-facebook"></i></a>
-												<a href="#"><i class="icon-social-twitter"></i></a>
-												<a href="#"><i class="icon-social-google"></i></a>
-												<a href="#"><i class="icon-social-linkedin"></i></a>
-												<a href="#"><i class="icon-social-youtube"></i></a>
-											</div>
 										</div>
 									</div>	
 
@@ -716,7 +688,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">Programming BOYS</a>. All right reserved.</p>
+					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">ATMTEC</a>. All right reserved.</p>
 				</div>
 			</div>
 
