--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 					                   <a class="mu-imglink" href="assets/images/portfolio/img-1.jpeg" title="Web Development">
 						                   	<img class="img-responsive" src="assets/images/portfolio/img-1.jpeg" alt="image">
 						                   	<div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">Programador Web</h4>
+						                    	<h4 class="mu-filter-item-title">ATMTEC</h4>
 						                    </div>
 					                   </a>
 					                </div>
@@ -387,7 +387,7 @@
 									<div class="col-sm-6 col-md-4">
 										<div class="mu-team-content-single">
 											<div class="mu-team-profile">
-												<img src="assets/images/pp.jpg" alt="team member">
+												<img src="assets/images/Vinicius.jpg" alt="team member">
 												<div class="mu-team-social-info">
 													<a href="#"><i class="icon-social-facebook"></i></a>
 													<a href="#"><i class="icon-social-twitter"></i></a>
