--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<div class="mu-about-header">
 								<h2 class="mu-heading-title">SOBRE <span>NÓS</span></h2>
 								<span class="mu-header-dot"></span>
-								<p>Nós desenvolvevemos projetos de Hackatons ou ideias Inovadoras, e estamos deixando disponíveis.</p>
+								<p>Nós desenvolvemos projetos de Hackatons ou ideias Inovadoras, e estamos deixando disponíveis.</p>
 							</div>
 
 							<!-- Start About Us Content -->
