--- a/index.html
+++ b/index.html
@@ -657,11 +657,11 @@
 							<!-- Start Contact Content -->
 									<div class="col-md-4">
 										<div class="mu-contact-right">
-											<h4>Programming Boys</h4>
+											<h4>ATMTEC</h4>
 											<p></p>
 											<address>
 												<p><i class="icon-location-pin"></i>Goiania, praça universitária</p>
-												<p><i class="icon-envelope"></i>programmingBOYS@hotmail.com</p>
+												<p><i class="icon-envelope"></i>atmtec2019@outlook.com</p>
 												<p><i class="icon-phone"></i>62 987 678 9834</p>
 											</address>
 										</div>
@@ -688,7 +688,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">ATMTEC</a>. All right reserved.</p>
+					<p>&copy; Copyright <a>ATMTEC</a>. All right reserved.</p>
 				</div>
 			</div>
 
