--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ATMTEC</title>
+    <title>Programming Boys</title>
     <link rel="shortcut icon" type="image/icon" href="assets/imges/favicon.ico"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
@@ -193,7 +193,7 @@
 												<i class="icon-vector"></i>
 											</span>
 											<h4>DESIGN</h4>
-											<p>Nosso projetetista irá nos informar uma imagem do que ele fez</p>
+											<p>Nosso projetista irá nos informar uma imagem do que ele fez</p>
 										</div>
 									</div>
 									<!-- / Service Single Content -->
@@ -564,82 +564,6 @@
 		</section>
 		<!-- End Testimonials -->
 
-		
-		<!-- Start Clients -->
-		<section id="mu-clients">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="mu-clients-area">
-
-							<div class="mu-clients-header">
-								<h2 class="mu-heading-title">Nossos <span>Clientes</span></h2>
-								<span class="mu-header-dot"></span>
-								<p>Aqui nos vamos mostrar algumas fotos dos clintes que gostaram da ideia</p>
-							</div>
-
-							<!-- Start Clients Content -->
-							<div class="mu-clients-content">
-								<div class="row">
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-1.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-2.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-3.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-5.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-4.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-6.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-								</div>
-							</div>
-							<!-- End Clients Content -->
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Clients -->
 
 		<!-- Start Contact -->
 		<section id="mu-contact">
@@ -657,11 +581,11 @@
 							<!-- Start Contact Content -->
 									<div class="col-md-4">
 										<div class="mu-contact-right">
-											<h4>ATMTEC</h4>
+											<h4>Programming Boys</h4>
 											<p></p>
 											<address>
 												<p><i class="icon-location-pin"></i>Goiania, praça universitária</p>
-												<p><i class="icon-envelope"></i>atmtec2019@outlook.com</p>
+												<p><i class="icon-envelope"></i>programmingBOYS@hotmail.com</p>
 												<p><i class="icon-phone"></i>62 987 678 9834</p>
 											</address>
 										</div>
@@ -688,7 +612,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p>&copy; Copyright <a>ATMTEC</a>. All right reserved.</p>
+					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">ATMTEC</a>. All right reserved.</p>
 				</div>
 			</div>
 
