--- a/index.html
+++ b/index.html
@@ -581,11 +581,11 @@
 							<!-- Start Contact Content -->
 									<div class="col-md-4">
 										<div class="mu-contact-right">
-											<h4>Programming Boys</h4>
+											<h4>ATMTEC</h4>
 											<p></p>
 											<address>
 												<p><i class="icon-location-pin"></i>Goiania, praça universitária</p>
-												<p><i class="icon-envelope"></i>programmingBOYS@hotmail.com</p>
+												<p><i class="icon-envelope"></i>atmtec2019@hotmail.com</p>
 												<p><i class="icon-phone"></i>62 987 678 9834</p>
 											</address>
 										</div>
